
	* Added new rte_set_parameters, codec status (private).

2001-09-23	New api <mschimek@users.sf.net>

	* Created private struct rte_codec and rte_codec_class
	* Removed rte_*_option parameter context (now in rte_codec)
	* Added rte_get_option and rte_option_value.

2001-09-13	<garetxe@users.sf.net>

	* configure: Put esd_cflags and esd_libs in place.
	* rte: removed rte_global_context

2001-09-01	<mschimek@users.sf.net>

	* rte.c: Increased video fifo depth by 2, all buffers required.
	  No bug, just in case.

2001-08-19	<mschimek@users.sf.net>

	* Cloned AC_CHECK_FUNCS(program_invocation_name) from Zapping.

2001-08-08	<garetxe@users.sf.net>

	* Made prepare_dist work properly, rte.rpm and mp1e.rpm can be
	generated now.

2001-08-07	<mschimek@users.sf.net>

	* ChangeLog forked off from mp1e/ChangeLog
	* rte: output error caused hang, ssize_t typo. Todo: MPEG plugin
	  should abort on error.
	* Deleted old fifo code.