@@ -1,3 +1,7 @@
+2001-10-17	<mschimek@users.sf.net>
+
+	* oss.c: Fixed sampling_freq check, reported by Ralf Oehler.
+
 2001-10-14	<mschimek@users.sf.net>
 
 	* mpeg1.c: Fixed drop & stop bug, fixed off-by-one frame_rate_code.
