@@ -1,5 +1,7 @@
+2001-10-17	<mschimek@users.sf.net>
 
 	* Added new rte_set_parameters, codec status (private).
+	* Added -lm to rte_test_LDADD.
 
 2001-09-23	New api <mschimek@users.sf.net>
 
